--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.1.0",
     "mini-css-extract-plugin": "^1.3.6",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
