--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "start": "webpack serve",
     "watch": "webpack --watch",
     "build": "set NODE_ENV=production&& webpack",
-    "build-dev": "webpack"
+    "build-dev": "webpack",
+    "snap": "react-snap"
+  },
+  "reactSnap": {
+    "source": "dist"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -30,6 +34,8 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-snap": "^1.23.0"
   }
 }
